@@ -1,3 +1,11 @@
+2011-01-21  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Unreviewed Chromium build fix attempt for r76378.
+
+        * src/WebScrollbarImpl.cpp:
+        (WebKit::WebScrollbar::create):
+        (WebKit::WebScrollbarImpl::WebScrollbarImpl):
+
 2011-01-21  Chris Rogers  <crogers@google.com>
 
         Reviewed by Kenneth Russell.
